--- a/src/css/GameInfo.css
+++ b/src/css/GameInfo.css
@@ -1,29 +1,43 @@
 .Game {
     width: 100%;
+    height: 350px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-between;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border-radius: 10px
 }
 
 .Game-icon {
     width: 100%;
-    max-width: 100%;
+    height: 200px;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .Game-icon img {
     width: 100%;
-    height: auto;
-    object-fit: contain;
+    height: 100%;
+    object-fit: cover;
     display: block;
 }
 
-.Game-info{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.Game-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
+
 }
 
-.cart-button{
-    justify-self: end;
+.cart-button {
+    padding: 6px 12px;
+    font-size: 15px;
+    cursor: pointer;
 }
